--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,23 @@
     "dev": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@types/nodemailer": "^7.0.2",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "googleapis": "^162.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.9"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21"
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11"
   }
 }
