--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,19 +1,21 @@
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/bankersden
 
-# JWT Secret (change this in production)
+# JWT Authentication
 JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
-# Gemini AI Configuration
+# Google Gemini AI Configuration
 GEMINI_API_KEY=your-gemini-api-key-here
 
-# Email Configuration (existing)
-SMTP_USER=your-email@gmail.com
-SMTP_PASS=your-app-password
-ADMIN_EMAIL=admin@bankersden.com
-PORT=5000
+# Email Configuration (Gmail SMTP)
+SMTP_USER=your_gmail@gmail.com
+SMTP_PASS=your_gmail_app_password
+ADMIN_EMAIL=admin@yourdomain.com
 
-# OAuth2 Configuration (existing)
+# Server Configuration
+PORT=5050
+
+# OAuth2 Configuration (Optional - for advanced email setup)
 OAUTH2_CLIENT_ID=your-oauth2-client-id
 OAUTH2_CLIENT_SECRET=your-oauth2-client-secret
 OAUTH2_REFRESH_TOKEN=your-oauth2-refresh-token
