--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "baseline-browser-mapping": "^2.8.16",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
